tests/ui/feature-gates/feature-gate-never_patterns.stderr
error: unexpected `,` in pattern
  --> $DIR/feature-gate-never_patterns.rs:36:16
   |
LL |         Some(_),
   |                ^
   |
help: try adding parentheses to match on a tuple...
   |
LL |         (Some(_),)
   |         +        +
help: ...or a vertical bar to match on multiple alternatives
   |
LL |         Some(_) |
   |

error[E0408]: variable `_x` is not bound in all patterns
  --> $DIR/feature-gate-never_patterns.rs:8:19
   |
LL |     let (Ok(_x) | Err(&!)) = res.as_ref();
   |             --    ^^^^^^^ pattern doesn't bind `_x`
   |             |
   |             variable not in all patterns

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:8:24
   |
LL |     let (Ok(_x) | Err(&!)) = res.as_ref();
   |                        ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:15:13
   |
LL |             !
   |             ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:15:13
   |
LL |             !
   |             ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:22:13
   |
LL |             !
   |             ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:22:13
   |
LL |             !
   |             ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:28:13
   |
LL |             ! => {}
   |             ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable

error: `match` arm with no body
  --> $DIR/feature-gate-never_patterns.rs:41:9
   |
LL |         Some(_)
   |         ^^^^^^^- help: add a body after the pattern: `=> todo!(),`

error: `match` arm with no body
  --> $DIR/feature-gate-never_patterns.rs:46:9
   |
LL |         Some(_) if false,
   |         ^^^^^^^- help: add a body after the pattern: `=> todo!(),`

error: `match` arm with no body
  --> $DIR/feature-gate-never_patterns.rs:48:9
   |
LL |         Some(_) if false
   |         ^^^^^^^- help: add a body after the pattern: `=> todo!(),`

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:53:13
   |
LL |         Err(!),
   |             ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable

error: `match` arm with no body
  --> $DIR/feature-gate-never_patterns.rs:53:9
   |
LL |         Err(!),
   |         ^^^^^^- help: add a body after the pattern: `=> todo!(),`

error[E0658]: `!` patterns are experimental
  --> $DIR/feature-gate-never_patterns.rs:58:13
   |
LL |         Err(!) if false,
   |             ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable

error: `match` arm with no body
  --> $DIR/feature-gate-never_patterns.rs:58:9
   |
LL |         Err(!) if false,
   |         ^^^^^^- help: add a body after the pattern: `=> todo!(),`

error: `match` arm with no body
  --> $DIR/feature-gate-never_patterns.rs:69:9
   |
LL |         Some(_)
   |         ^^^^^^^- help: add a body after the pattern: `=> todo!(),`

error: `match` arm with no body
  --> $DIR/feature-gate-never_patterns.rs:75:9
   |
LL |         Some(_) if false
   |         ^^^^^^^- help: add a body after the pattern: `=> todo!(),`

error: a guard on a never pattern will never be run
  --> $DIR/feature-gate-never_patterns.rs:58:19
   |
LL |         Err(!) if false,
   |                   ^^^^^ help: remove this guard

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0408, E0658.
For more information about an error, try `rustc --explain E0408`.
